--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,12 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-
+<dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-deploy-plugin</artifactId>
+  <version>3.0.0-M1</version>
+  <type>maven-plugin</type>
+</dependency>
 		<!-- compile dependencies -->
 
 		<dependency>
