--- a/pom.xml
+++ b/pom.xml
@@ -104,23 +104,23 @@
 		</dependency>
 		
 	</dependencies>
-	<!--
+	
 	<distributionManagement>
 	
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
+	      <url>http://ec2-18-117-182-206.us-east-2.compute.amazonaws.com:8081/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <url>http://ec2-18-117-182-206.us-east-2.compute.amazonaws.com:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
-	-->
+	
 	<build>
 		<finalName>maven-web-application</finalName>
 		
