--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://18.118.207.191:9000/</sonar.host.url>
+		<sonar.host.url>http://ec2-3-145-30-83.us-east-2.compute.amazonaws.com:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -105,18 +105,19 @@
 		
 	</dependencies>
 	
+
 	<distributionManagement>
-	
+
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.23.131.227:8081/repository/maven-releases/</url>
+	      <name>sample Technologies Releases Nexus Repository</name>
+	      <url>http://ec2-18-117-144-215.us-east-2.compute.amazonaws.com:8081/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.23.131.227:8081/repository/maven-snapshots/</url>
+	      <name>sample Snapshot Nexus Repository </name>
+	      <url>http://ec2-18-117-144-215.us-east-2.compute.amazonaws.com:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
